--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,9 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 
+# 페이지 사이즈에 대한 설정을 커스터마이징 할 수 있다 혹은 @PageableDefault annotation 사용
+# spring.data.web.pageable.default-page-size=5
+# spring.data.web.pageable.max-page-size=10
+
 logging.level.org.hibernate.SQL=debug
 # logging.level.org.hibernate.type=trace
